 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.7rc1

 - [ZBX-3979] adding support searchWildcardsEnabled flag in API for searching using wildcards (Eduard)
 - [ZBX-4018] fixed server crash on unsupported aggregate items (asaveljevs,Sasha)
 - [ZBX-3908] allow empty string for formula field if multiplier is switched off (Eduard)
 - [ZBX-3961] added recalculation of nextcheck time after changed flexible intervals (rudolfs)
 - [ZBX-3978] fixed time period calculation, do not include upper bound (dimir,Sasha,KB)
 - [ZBX-4000] fixed stop propagation in IE9 for Map (Eduard)
 - [ZBX-2467] added more command line arguments to objdump to request more debugging information about crashes (asaveljevs)
 - [ZBX-3972] added NOW and DONE buttons into js calendar - change action after day selection (Eduard)
 - [ZBX-3993] fixed transmitting of templated user macros between server and proxy (Sasha)
 - [ZBX-4008] updated Japanese translation; thanks to Kodai Terashima (Richlv)
 - [ZBX-4005] updated French translation; thanks to Joseph Bueno (Richlv)
 - [ZBXNEXT-869] clarify in manpages how the process for runtime signalling is found (Richlv)

Changes for 1.8.6

1.8.6rc2 was released as 1.8.6 without any changes

Changes for 1.8.6rc2

 - [ZBX-3990] fixed exiting proxy and server on cache reload using runtime control options (rudolfs)
 - [ZBX-3835] fixed possible security vulnerability in redirects (Vedmak)

Changes for 1.8.6rc1

 - [ZBX-3968] fixed issues with filtering in monitoring->events in Internet Explorer 7 (KB)
 - [ZBX-3469] fixed setting UNKNOWN trigger status when agent goes down (dimir)